@@ -733,6 +733,11 @@ handler apparently doesn't handle all the ones it should.
 Mac users will need their usual arsenal of file converters
 to deal with an HCOM file on other systems.
 .TP
+.B .ima
+A headerless file of IMA ADPCM audio data. IMA ADPCM claims 16-bit precision
+packed into only 4 bits, but in fact sounds no better than
+.BR .vox .
+.TP
 .B .maud
 An IFF-conforming audio file type, registered by
 MS MacroSystem Computer GmbH, published along
